--- a/css/perfilProfessor/style768.css
+++ b/css/perfilProfessor/style768.css
@@ -62,13 +62,14 @@ hr {
 
 
 
+*:not(i) {font-family: Roboto!important;}
 
 
 main {
   width: 100vw;
   min-height: 100vh;
-  padding: 80px 20px 0;
-  background: #F7FDFD; /*ou FAFEFE*/
+  padding: 80px 20px 0 30px;
+  background: #f7f7f7; /*ou FAFEFE*/
 }
 
 .greetings {
@@ -120,6 +121,12 @@ main {
   align-items: center;
 }
 
+.block.um {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px -2px 17px 5px rgba(0, 43, 56, 0.04);
+}
+
 .scroll-box{
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
@@ -128,7 +135,7 @@ main {
 
 .schedule {
   height: 200px;
-  color: #f2f2f2;
+  color: #9e9c9c;
   margin: 10px;
 }
 
@@ -147,12 +154,12 @@ h2 {
 .schedule .item {
   max-width: 330px;
   min-height: calc(75px + 1vh);
-  background-color: #c9c9c9;
+  background-color: #e8e5e5;
   margin-bottom: 5px;
   display: flex;
   flex-flow: row;
   border-radius: 20px
-  }
+}
 
 .schedule .select-item {
   background-color: #0cc;
@@ -162,8 +169,8 @@ h2 {
 .schedule .select-item i{
   width: 38px;
   height: 38px;
-  font-size: 1.1em;
-  border-radius: 19px;
+  font-size: .9em;
+  border-radius: 23px;
   color: #fff;
   background-color: #036;
   border: 4px solid #0cc;
@@ -226,15 +233,22 @@ h2 {
 .calendario {
   max-width: 400px;
   height: 400px;
-  margin: 40px 0;
   padding: 20px;
-  border-radius: 20px;
-  color: #434343;
-  background-color: rgba(0, 105, 205, .2);
+  color: #313131;
+  border-radius: 10px;
+  background-color: #fff;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0px -2px 17px 5px rgba(0, 43, 56, 0.04);
+}
+
+
+
+
+
+
 }
 
 .calendario h2 {
@@ -289,12 +303,13 @@ h2 {
 }
 
 .notif {
-  width: 320px;
+  width: 100%;
   height: 400px;
   padding: 20px;
   position: relative;
-  background-color: #D5E7F4;
-  border-radius: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px -2px 17px 5px rgba(0, 43, 56, 0.04);
 }
 
 .notif .scroll-box {
@@ -305,8 +320,8 @@ h2 {
 .notif-item {
   width: 100%;
   height: 70px;
-  border-radius: 20px;
-  background-color: #B7D6EC;
+  border-radius: 10px;
+  background-color: #dae5ec;
   margin-bottom: 10px;
 }
 
@@ -319,7 +334,7 @@ h2 {
   main{
     display: inline-grid;
     grid-template-columns: 25% 25% 20% 20%;
-    grid-template-rows: 100px 340px 250px 200px;
+    grid-template-rows: 150px 340px 250px 200px;
     grid-column-gap: 3.3%;
     grid-row-gap: 25px;
   }
