--- a/css/default.css
+++ b/css/default.css
@@ -64,3 +64,18 @@
   .title {font-weight: bold;}
 
   .profile-photo-menu {background-color: #036;}
+
+  @media (min-width: 769px) {
+    header *:not(i) {
+        font-family: Roboto Thin, arial, sans-serif;
+      }
+
+      .menu-buttons .atual{
+        background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);
+        border-right: solid 5px white;
+        padding-right: 5px;
+      }
+
+      .menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
+  }
