--- a/css/cssOperacaoCurso/style1366.css
+++ b/css/cssOperacaoCurso/style1366.css
@@ -148,16 +148,18 @@ h1{
 }
 
 #linkcurso{
-text-align: center;
-width: 135px;
-height: 60px;
+text-align: right;
+width: auto;
+height: 50px;
 font-size: 18px;
-background: #00CCCC;
+background: rgb(1, 39, 77);
 font-weight: bold;
 color: rgb(255, 255, 255)!important;
 border: 0 none;
 cursor: pointer;
-padding: 10px 5px;
+padding-top: 15px;
+padding-left: 7px;
+padding-right: 7px;
 margin: 10px 5px;
 text-decoration: none;
 border-radius: 12px;
@@ -174,4 +176,33 @@ border-radius: 12px;
  width:50px;
 
  
+}
+table{
+  width:100%;
+  table-layout: fixed;
+  text-decoration: none;
+}
+
+th{
+  padding: 10px 15px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 17px;
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  background-color:rgb(200, 225, 233);
+
+}
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 15px;
+  border-bottom: solid 1px rgba(177, 177, 177, 0.6);
+  text-decoration: none;
+  color: black
+}
+.botaozin{
+  text-decoration: none;
 }
