--- a/css/cssOperacaoCurso/style480.css
+++ b/css/cssOperacaoCurso/style480.css
@@ -4,6 +4,8 @@
     height: 60px;
   }
   
+  html {overflow: hidden;}
+
   .logo {
     width: 2.5em;
     height: 2.5em;
@@ -23,7 +25,7 @@
     flex-flow: column;
     align-items: center;
     right: -100vw;
-    background: #051523;
+    background: #051523;  
   }
   
   .menu {
@@ -191,3 +193,34 @@ border-radius: 15px;
  text-align: left;
  width:40px;
  }
+
+table{
+  width:100%;
+  table-layout: fixed;
+  text-decoration: none;
+}
+
+main th{
+  padding: 10px 15px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 17px;
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  background-color:rgb(200, 225, 233);
+
+}
+main td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 15px;
+  border-bottom: solid 1px rgba(177, 177, 177, 0.6);
+  color: black
+}
+main .botaozin{
+color:black;
+font-weight: bold;
+text-decoration: underline;
+}
