--- a/css/cssOperacaoCurso/style1024.css
+++ b/css/cssOperacaoCurso/style1024.css
@@ -176,3 +176,34 @@ border-radius: 12px;
 
  
 }
+
+table{
+  width:100%;
+  table-layout: fixed;
+  text-decoration: none;
+}
+
+th{
+  padding: 10px 15px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 17px;
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  background-color:rgb(200, 225, 233);
+
+}
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 15px;
+  border-bottom: solid 1px rgba(177, 177, 177, 0.6);
+  color: black
+}
+.botaozin{
+color:black;
+font-weight: bold;
+text-decoration: underline;
+}
