--- a/css/cssOperacaoCurso/style1366.css
+++ b/css/cssOperacaoCurso/style1366.css
@@ -137,7 +137,7 @@ a.buttonNext {
 h1{
   color:#036;
   margin-bottom:15px;
-  margin-top: -70px;
+  margin-top: -45px;
   text-align: center;
 }
 
@@ -161,12 +161,13 @@ padding-top: 15px;
 padding-left: 7px;
 padding-right: 7px;
 margin: 10px 5px;
-text-decoration: none;
+
 border-radius: 12px;
 }
 .setinha{
-  
-
+  position: fixed;
+  left: 4px;
+  top: -40px;
   height: 90px;
   padding: 80px 55px 0;
 
@@ -179,6 +180,7 @@ border-radius: 12px;
 }
 table{
   width:100%;
+  margin-top: 30px;
   table-layout: fixed;
   text-decoration: none;
 }
@@ -200,9 +202,10 @@ td{
   font-weight: 300;
   font-size: 15px;
   border-bottom: solid 1px rgba(177, 177, 177, 0.6);
-  text-decoration: none;
   color: black
 }
 .botaozin{
-  text-decoration: none;
+color:black;
+font-weight: bold;
+text-decoration: underline;
 }
