--- a/css/cssPrimeiroAcesso/style1024.css
+++ b/css/cssPrimeiroAcesso/style1024.css
@@ -1,19 +1,22 @@
+*{
+    margin:0;
+    padding:0;
+}
 .recebeDados{
     border: 1px solid #000;
     margin-top: 10px;
 }
 
 
-*{
-    margin:0;
-    padding:0;
-}
 
 body{
     background-color: #fff
 }
-.acessDenied{
-    display: none
+.recebeDados{
+    border:none;
+    display: flex;
+    justify-content: center;
+
 }
 .headerPrimeiroAcesso{
     background-color: #003366;
@@ -30,7 +33,13 @@ body{
     height: 80px;
 
 }
+.table-remove{
+    float: right
+}   
 
+.blank{
+    margin-bottom: 50px;
+}
 .acessoUm{
     display: flex;
     align-items: center;
@@ -42,21 +51,37 @@ body{
 }
 .acessoUm p {
     font-size: 20px;
-    color: #666;
+    
     max-width: 500px;
 }
-
+p.vsf{
+    font-size: 16px;
+    color: #666;
+    padding: 10px;
+    text-align: center;
+}
+.perfil-foto{
+    width: 176px;
+    height:176px;
+    border-radius: 25px;
+    z-index: 1;
+}
 .acessoUm form{
     text-align: left;
     padding: 30px;
 }
+.acessoUm form h2{
+    font-size: 30px;
+    color: #003366;
+    margin: 5px;
+    text-align: center;}
 
 .acessoUm label{
 
     font-size: 20px;
     display: block;
 }
-.acessoUm #visor, #visor1, #visor2, #visor3, #visor4, #visor5, #visor6{
+.acessoUm input{
     margin-bottom: 10px;
     height: 30px;
     width: 700px;
@@ -67,6 +92,7 @@ body{
 .recebeDados{
     text-align: left;
     font-size: 20px;
+    margin: 15px;
 }
 
 
@@ -87,22 +113,44 @@ body{
 /****/
 
 
+.puto {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 
-.buttonNext {
-    display: block;
+input.buttonNext {
     text-align: center;
-    width: 200px!important;
-    height: 50px!important;
+    width: 200px;
+    height: 50px;
     font-size: 26px;
     background: #00CCCC;
     font-weight: bold;
     color: white;
-    border: 0 none!important;
+    border: 0 none;
+    border-radius: 1px;
     cursor: pointer;
     padding: 10px 5px;
-    margin: 10px auto;
+    margin: 10px 5px;
     text-decoration: none;
-    border-radius: 20px;
+    border-radius: 15px;
+}
+
+a.buttonNext {
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    font-size: 26px;
+    background: #00CCCC;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 1px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 5px;
+    text-decoration: none;
+    border-radius: 15px;
 }
 
 
