--- a/css/cssPrimeiroAcesso/style768.css
+++ b/css/cssPrimeiroAcesso/style768.css
@@ -1,36 +1,42 @@
-.recebeDados{
-    border: 1px solid #000;
-    margin-top: 10px;
-}
-.acessDenied{
-    display: none
-}
-
 *{
     margin:0;
     padding:0;
 }
 
+.recebeDados{
+    border:none;
+    display: flex;
+    justify-content: center;
+
+}
+
+.blank{
+    margin-bottom: 50px;
+}
 body{
-    background-color: #fff
+    background-color: #fff;
+    overflow-x: hidden;
 }
 
 .headerPrimeiroAcesso{
     background-color: #003366;
-    width: 100vw;
+    width: 100%;
     height: 60px;
     border-bottom: 10px solid #00CCCC;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-bottom: 50px;
+    margin: 0 0 50px 0;
 }
 .headerPrimeiroAcesso a img{
     width: 80px;
     height: 80px;
 
 }
-
+.table-remove{
+    float: right
+}   
+ 
 .acessoUm{
     display: flex;
     align-items: center;
@@ -42,13 +48,23 @@ body{
 }
 .acessoUm p {
     font-size: 20px;
-    color: #666;
-    max-width: 500px;
+    
 }
-
+p.vsf{
+    font-size: 16px;
+    color: #666;
+    padding: 10px;
+    text-align: center;
+}
+.perfil-foto{
+    width: 176px;
+    height:176px;
+    border-radius: 25px;
+    z-index: 1;
+}
 .acessoUm form{
     text-align: left;
-    padding: 30px;
+    margin:10px;
 }
 .acessoUm form h2{
     font-size: 30px;
@@ -57,22 +73,22 @@ body{
     text-align: center;}
 
 .acessoUm label{
-
-    font-size: 20px;
+    color: #666;
+    font-size: 18px;
     display: block;
 }
-.acessoUm #visor1, #visor2, #visor3, #visor4, #visor5, #visor6{
+.acessoUm input{
     margin-bottom: 10px;
     height: 30px;
     width: 700px;
     border:none;
     border-bottom: 3px solid #666;
 
-
 }
 .recebeDados{
     text-align: left;
     font-size: 20px;
+    margin: 15px;
 }
 
 
@@ -94,22 +110,46 @@ body{
 
 
 
-.buttonNext {
-    display: block;
+.puto {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+input.buttonNext {
     text-align: center;
-    width: 200px!important;
-    height: 50px!important;
+    width: 200px;
+    height: 50px;
     font-size: 26px;
     background: #00CCCC;
     font-weight: bold;
     color: white;
-    border: 0 none!important;
+    border: 0 none;
+    border-radius: 1px;
     cursor: pointer;
     padding: 10px 5px;
-    margin: 10px auto;
+    margin: 10px 5px;
     text-decoration: none;
-    border-radius: 20px;
+    border-radius: 15px;
 }
+
+a.buttonNext {
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    font-size: 26px;
+    background: #00CCCC;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 1px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 5px;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
 
 
 #alteraFoto{
