chamada ocorrencia ok

--- a/css/chamada-ocorrencia/chamada_ocorrencia1366.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1366.css
@@ -225,10 +225,10 @@ main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
         #lista{
             display: flex;
               flex-direction: row;
-           justify-content: space-around;
+           justify-content: space-between;
             align-items: center;
             border-bottom:1px solid #ccc;
-            padding:20px;
+            padding:20px 120px;
         
               }
           
@@ -329,18 +329,26 @@ main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
           
           
               /*************** SEÇÃO OCORRÊNCIAS*****************/
-          
+              span#numAluno {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 500px;
+                text-align:left;
+                
+
+                 }
               #dadosAluno{
             display: flex;
-            flex-direction: row;
-           justify-content: space-around;
-            align-items: center;
+            flex-direction: row-reverse;
+            text-align: left;
+           justify-content: space-between;
+            align-items:center;
             border-bottom:1px solid #ccc ;
-            padding:10px;
-            margin-left:5%;
-            margin-right:5%;
-    
+            padding:10px 140px;
+            margin-top:10px;
+           
               }
+              
           
               #imgAluno{
                 width:95px;
