--- a/css/chamada-ocorrencia/chamada_ocorrencia480.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia480.css
@@ -209,15 +209,19 @@ select:focus {
       margin-left: -100%; 
     }
 /**************  SEÇÃO - CHAMADA ******************/
-
+    
+div#infoaluno {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+}
     #lista{
-  display: flex;
-	flex-direction: row;
- justify-content: space-around;
-  align-items: center;
-  border-bottom:1px solid #ccc;
-  padding:20px;
-
+      display: flex;
+      flex-direction: row;
+   justify-content: space-between;
+    align-items: center;
+    border-bottom:1px solid #ccc;
+    padding:15px 10px;
     }
 
     #legenda{
@@ -318,13 +322,24 @@ select:focus {
 
     /*************** SEÇÃO OCORRÊNCIAS*****************/
 
+    span#numAluno {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 200px;
+      text-align:left;
+      
+
+       }
     #dadosAluno{
-      display: flex;
-	flex-direction: row;
- justify-content: space-evenly;
-  align-items: center;
-  border-bottom:1px solid #ccc;
-  padding:10px;
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+ justify-content: space-between;
+  align-items:center;
+  border-bottom:1px solid #ccc ;
+  padding:10px 10px;
+  margin-top:10px;
+ 
     }
 
     #imgAluno{
