--- a/css/chamada-ocorrencia/chamada_ocorrencia480.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia480.css
@@ -331,14 +331,14 @@ div#infoaluno {
 
        }
     #dadosAluno{
-  display: flex;
-  flex-direction: row;
-  text-align: left;
- justify-content: space-between;
-  align-items:center;
-  border-bottom:1px solid #ccc ;
-  padding:10px 10px;
-  margin-top:10px;
+      display: flex;
+      flex-direction: row-reverse;
+      text-align: left;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #ccc;
+      padding: 10px 20px;
+      margin-top: 10px;
  
     }
 
