--- a/css/configuracoes/style1366.css
+++ b/css/configuracoes/style1366.css
@@ -118,13 +118,13 @@ form .foto-edit {
   background: #d2d2d2;
   margin: 10px;
 }
-
+/*
 .foto-perfil label {display: none;
 transition: 4s;
 transition-property: all;
 transition-timing-function: ease;
 transition-delay: 0s;}
-
+*/
 .foto-perfil label {
   display: block;
   width: 40px;
