--- a/css/cssCadastrosOutros/style1024.css
+++ b/css/cssCadastrosOutros/style1024.css
@@ -2,22 +2,99 @@
     margin:0;
     padding:0;
 }
+.header {
+  width: 100vw;
+  height: 70px;
+}
 
+.logo {
+  width: 2.6em;
+  height: 2.6em;
+  margin-left: 15px;
+}
+
+.hamburger{
+  width: 70px;
+  height: 100%;
+}
+
+.hamburger svg{
+  width: 1.2em;
+}
+
+.fullnav {
+  bottom: 0%;
+  top: 0%;
+  flex-flow: column;
+  align-items: center;
+  right: -100vw;
+  background: #051523;
+}
+
+.menu {
+  width: 50vw;
+  overflow-y: scroll;
+  align-items: stretch;
+}
+
+hr {
+  width: 0px;
+  color: #051523;
+  margin: 30px 0;
+}
+
+.menu-buttons {min-height: 350px;}
+
+.menu-buttons li {font-size: 1.6em}
+
+.menu-buttons i {
+  font-size: .9em;
+  margin-right: 4px
+}
+
+.title, .subtitle {font-size: 1.3em;}
+
+.title {font-size: 1.4em}
+
+.profile-photo-menu {
+  padding-top: 25;
+  margin: 70px 0 20px;
+}
+
+.active-menu .fullnav {right: 0;}
+
+
+
+*:not(i) {font-family: Roboto!important;}
+
+
+main {
+  width: 100vw;
+  min-height: 100vh;
+  padding: 80px 20px 0 30px;
+  background: #f7f7f7; /*ou FAFEFE*/
+}
+
+.recebeDados{
+    border: 1px solid #000;
+    margin-top: 10px;
+}
+
+.setinha{
+    display: flex;
+    align-self: flex-start;
+    margin-left: 50px;
+}
+
+body{
+    background-color: #fff
+}
 .recebeDados{
     border:none;
     display: flex;
     justify-content: center;
 
 }
-
-.blank{
-    margin-bottom: 50px;
-}
-body{
-    background-color: #fff;
-    overflow-x: hidden;
-}
-
 .headerPrimeiroAcesso{
     background-color: #003366;
     width: 100%;
@@ -26,7 +103,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 0 0 50px 0;
+    margin-bottom: 50px;
 }
 .headerPrimeiroAcesso a img{
     width: 80px;
@@ -36,7 +113,10 @@ body{
 .table-remove{
     float: right
 }   
- 
+
+.blank{
+    margin-bottom: 50px;
+}
 .acessoUm{
     display: flex;
     align-items: center;
@@ -49,6 +129,7 @@ body{
 .acessoUm p {
     font-size: 20px;
     
+    max-width: 500px;
 }
 p.vsf{
     font-size: 16px;
@@ -64,7 +145,7 @@ p.vsf{
 }
 .acessoUm form{
     text-align: left;
-    margin:10px;
+    padding: 30px;
 }
 .acessoUm form h2{
     font-size: 30px;
@@ -73,19 +154,18 @@ p.vsf{
     text-align: center;}
 
 .acessoUm label{
-    color: #666;
-    font-size: 18px;
+
+    font-size: 20px;
     display: block;
 }
 .acessoUm input{
     margin-bottom: 10px;
     height: 30px;
     width: 700px;
-   border:none;
+    border:none;
     border-bottom: 2px solid #000;
     border-radius: 5px;
     background:none;
-
 }
 .recebeDados{
     text-align: left;
@@ -93,11 +173,6 @@ p.vsf{
     margin: 15px;
 }
 
-#line{
-    height:1px;
-    border: 2px solid #B7D6EC;
-    margin-bottom: 10px;
-}
 
 #plus{
     font-size: 30px;
@@ -114,7 +189,6 @@ p.vsf{
 
 
 /****/
-
 
 
 .puto {
@@ -158,7 +232,6 @@ a.buttonNext {
 }
 
 
-
 #alteraFoto{
     z-index: 2;
     width: 35px;
@@ -166,4 +239,10 @@ a.buttonNext {
     position: relative;
     top: -50px;
     right: -50px;
+}
+
+#line{
+    height:1px;
+    border: 2px solid #B7D6EC;
+    margin-bottom: 10px;
 }
