--- a/css/cssCadastrosOutros/style768.css
+++ b/css/cssCadastrosOutros/style768.css
@@ -2,6 +2,79 @@
     margin:0;
     padding:0;
 }
+.header {
+  width: 100vw;
+  height: 70px;
+}
+
+.logo {
+  width: 2.6em;
+  height: 2.6em;
+  margin-left: 15px;
+}
+
+.hamburger{
+  width: 70px;
+  height: 100%;
+}
+
+.hamburger svg{
+  width: 1.2em;
+}
+
+.fullnav {
+  bottom: 0%;
+  top: 0%;
+  flex-flow: column;
+  align-items: center;
+  right: -100vw;
+  background: #051523;
+}
+
+.menu {
+  width: 100vw;
+  overflow-y: scroll;
+}
+
+hr {
+  width: 75vw;
+  color: #c9c9c9;
+  margin: 30px 0;
+}
+
+.menu-buttons {min-height: 350px;}
+
+.menu-buttons li {font-size: 1.6em}
+
+.menu-buttons i {
+  font-size: .9em;
+  margin-right: 4px
+}
+
+.title, .subtitle {font-size: 1.3em;}
+
+.title {font-size: 1.4em}
+
+.profile-photo-menu {
+  width: 25%;
+  padding-top: 25%;
+  border-radius: 160px;
+  margin: 70px 0 20px;
+}
+
+.active-menu .fullnav {right: 0;}
+
+
+
+*:not(i) {font-family: Roboto!important;}
+
+
+main {
+  width: 100vw;
+  min-height: 100vh;
+  padding: 80px 20px 0 30px;
+  background: #f7f7f7; /*ou FAFEFE*/
+}
 
 .recebeDados{
     border:none;
@@ -9,7 +82,11 @@
     justify-content: center;
 
 }
-
+.setinha{
+    display: flex;
+    align-self: flex-start;
+    margin-left: 50px;
+}
 .blank{
     margin-bottom: 50px;
 }
@@ -81,11 +158,10 @@ p.vsf{
     margin-bottom: 10px;
     height: 30px;
     width: 700px;
-   border:none;
+    border:none;
     border-bottom: 2px solid #000;
     border-radius: 5px;
     background:none;
-
 }
 .recebeDados{
     text-align: left;
@@ -93,11 +169,6 @@ p.vsf{
     margin: 15px;
 }
 
-#line{
-    height:1px;
-    border: 2px solid #B7D6EC;
-    margin-bottom: 10px;
-}
 
 #plus{
     font-size: 30px;
@@ -166,4 +237,10 @@ a.buttonNext {
     position: relative;
     top: -50px;
     right: -50px;
+}
+
+#line{
+    height:1px;
+    border: 2px solid #B7D6EC;
+    margin-bottom: 10px;
 }
